--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -557,7 +557,7 @@ progress {
   font-size: 0.875em;
   color: #6c757d;
 }
-.blockquote-footer::before {
+.blockquote-footer:: {
   content: "— ";
 }
 
